--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
 
   </head>
   <body>
-
+    <blockquote class="blockquote text-left">
+      <p class="display-1 text-primary" >Weather Sensor</p>
+    </blockquote>
     <div id="app">
       <div class="container-fluid">
         
