added Min,Max-values to the charts

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 
   </head>
   <body>
-    <blockquote class="blockquote text-left">
-      <p class="display-1 text-primary" >Weather Sensor</p>
+    <blockquote class="blockquote">
+      <p class="display-1 text-primary text-center" >Weather Sensor</p>
     </blockquote>
     <div id="app">
       <div class="container-fluid">
